--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,31 @@
-# --- Streamlit for UI ---
+# --- Streamlit UI ---
 streamlit>=1.37.0
 
-# --- Core LangChain libraries ---
-langchain
-langchain-core
-langchain-community
-langchain-text-splitters
-langchain-openai
-langchainhub
+# --- LangChain ecosystem (with OpenAI) ---
+langchain>=0.3.3
+langchain-core>=0.3.8
+langchain-community>=0.3.2
+langchain-text-splitters>=0.3.0
+langchain-openai>=0.2.0     # ✅ contains ChatOpenAI
+langchainhub>=0.1.15
 
-# --- Embedding / Vectorstore support ---
-chromadb
-faiss-cpu
-sentence-transformers
+# --- Vector DBs ---
+chromadb>=0.5.3
+faiss-cpu>=1.8.0
+sentence-transformers>=3.0.1
 
-# --- LLM Providers (OpenAI + Hugging Face local fallback) ---
-openai
-transformers
-accelerate
-torch
-numpy
+# --- LLM backends ---
+openai>=1.42.0
+transformers>=4.44.0
+torch>=2.3.0
+accelerate>=0.34.0
 
-# --- LangGraph (for agent orchestration) ---
-langgraph
+# --- Orchestration ---
+langgraph>=0.1.8
 
 # --- Utilities ---
-python-dotenv
-tqdm
-requests
-pandas
+python-dotenv>=1.0.1
+requests>=2.32.3
+tqdm>=4.66.4
+pandas>=2.2.2
+numpy>=1.26.0
